fixed table spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -99,10 +99,12 @@ tbody tr:nth-child(odd) {
 
 
 .centered {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  width: 80%;
-  margin: auto;
 }
+
 
 .right {
   margin-left: auto;
@@ -279,7 +281,7 @@ input[type=submit] {
 .rest-form-inner {
   text-align: left;
   display: inline-block;
-  background-color:rgba(200, 233, 238, 0.605);
+  background-color: rgba(200, 233, 238, 0.605);
   box-shadow: 5px 4px 30px rgba(0, 0, 0, .10);
   padding: 30px;
   margin-top: 50px;
@@ -297,68 +299,82 @@ input[type=submit] {
   color: #f2f2f2;
 }
 
-.starting-location-search{
+.starting-location-search {
   margin-top: 10px;
 }
 
-.my-rests-title-row{
-  margin-top:50px;
+.my-rests-title-row {
+  margin-top: 50px;
 }
 
 
-.category-list{
+.filters {
   width: 20%;
-  padding-right:20px;
-
+  text-align: center;
 }
 
 
 
-.category-list-inner, .starting-location-search{
+.category-list-inner,
+.starting-location-search {
+  margin-left: auto;
+  margin-right: 0;
   width: 100%;
   max-height: 300px;
   min-width: 90px;
   max-width: 200px;
   padding-bottom: 10px;
   overflow-y: scroll;
-  overflow:scroll;
+  overflow: scroll;
   white-space: nowrap;
-  background-color:rgba(200, 233, 238, 0.605);
+  background-color: rgba(200, 233, 238, 0.605);
   box-shadow: 5px 4px 30px rgba(0, 0, 0, .10);
   border-radius: 10px;
-  text-align: left !important;
+  text-align: left;
   border: 1px solid rgb(200, 200, 200);
 }
 
-.cat_list{
+.category-list-items {
   list-style-type: none;
-  margin:0px;
-  padding:0px;
+  margin: 0px;
+  padding: 0px;
 }
 
-.categories-header{
-font-size: 18px;
-padding-right: 10px;
-padding-left: 10px;
-margin-bottom: 6px;
-text-align: center;
+.categories-header {
+  font-size: 18px;
+  margin-bottom: 6px;
+  text-align: center;
 
 
 }
 
-.starting-location-input{
-  margin:auto;
+.starting-location-input {
   text-align: center;
 }
 
-#searchTextField{
+#searchTextField {
   border: 1px solid rgb(200, 200, 200);
   border-radius: 5px;
   height: 20px;
 }
 
-.max-category-message{
+.max-category-message {
   font-size: 10px;
   color: rgba(0, 0, 0, 0.658);
   text-align: center;
+}
+
+.div-table {
+  display: table;
+  border-collapse: separate;
+  border-spacing: 0px;
+}
+
+.div-row {
+  display: table-row;
+}
+
+.div-cell {
+  display: table-cell;
+  padding: 10px;
 }
